--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
         "url": "git+https://github.com/BloomInstituteOfTechnology/node-api3-project.git"
     },
     "dependencies": {
-        "@vscode/sqlite3": "5.0.7",
+        "@vscode/sqlite3": "^5.0.7",
         "express": "^4.17.3",
-        "knex": "^1.0.3"
+        "knex": "^1.0.7"
     },
     "devDependencies": {
         "@types/jest": "^27.4.1",
